syntax = "proto3";
package fairyring.keyshare;

option go_package = "github.com/Fairblock/fairyring/x/keyshare/types";

// Decryption key defines the structure and height for a decryption key
message DecryptionKey {
  uint64 height = 1;
  string data = 2;
}
